# mygeodetest

./: CMakeLists.txt  README_compilation.md  about.md  changelog.md  main.cpp  mod.json
.github/workflows/: build.yml
